# kafka-chat

./: .env.example  Dockerfile  Makefile  pyproject.toml
app/application/api/: main.py  schemas.py
app/application/api/chat/: filters.py  routes.py  schemas.py
app/application/api/dependencies/: containers.py
app/application/api/messages/: routes.py
app/domain/entities/: base.py  chat.py  messages.py
app/domain/events/: base.py  chat.py  messages.py
app/domain/exceptions/: base.py  chat.py  messages.py
app/domain/values/: base.py  chat.py  messages.py
app/infra/repositories/: base.py  chat.py  converters.py
app/infra/repositories/chat/: base.py  converters.py  memory.py  mongo.py
app/infra/repositories/filters/: messages.py
app/infra/repositories/message/: base.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  chat.py  message.py  messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  chat.py  mediator.py  messages.py
app/logic/queries/: base.py  chat.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_chat.py  test_messages.py
app/tests/logic/: test_chat.py
docker/: app.yaml  kafka.yaml  storages.yaml
